--- a/.github/workflows/secret-detection.yml
+++ b/.github/workflows/secret-detection.yml
@@ -8,23 +8,27 @@ on:
 jobs:
   gitleaks:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+      - name: Install Gitleaks
+        run: |
+          sudo apt update
+          sudo apt install -y curl
+          curl -sSfL https://github.com/zricethezav/gitleaks/releases/download/v8.24.3/gitleaks_8.24.3_linux_x64.tar.gz \
+            | tar xz -C /tmp
 
       - name: Run Gitleaks
-        uses: zricethezav/gitleaks-action@v2
-        with:
-          redaction: true
-          format: sarif
-          output: gitleaks-results.sarif
-          ignore-exit-code: true
+        run: |
+          /tmp/gitleaks detect --redact --first-parent --report-format=sarif --report-path=./gitleaks-results.sarif || true
 
+      - name: List files
+        run: ls -la
       - name: Upload Gitleaks Report
         uses: actions/upload-artifact@v4
         with:
           name: gitleaks-report
-          path: gitleaks-results.sarif
-
+          path: ./gitleaks-results.sarif
