--- a/.github/workflows/secret-detection.yml
+++ b/.github/workflows/secret-detection.yml
@@ -23,7 +23,7 @@ jobs:
 
       - name: Run Gitleaks
         run: |
-          /tmp/gitleaks detect --redact --first-parent --report-format=sarif --report-path=./gitleaks-results.sarif || true
+            /tmp/gitleaks detect -v --redact --report-format=sarif --report-path=./gitleaks-results.sarif || true
 
       - name: List files
         run: ls -la
